# fmorency-release-test

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml  release.sh
src/: main.rs  utils.rs
