[package]
name = "fmorency-release-test"
version = "1.0.2" # managed by release.sh
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Release test"
homepage = "https://github.com/fmorency/fmorency-release-test"
repository = "https://github.com/fmorency/fmorency-release-test"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
